<resources>
    <string name="app_name">Smart Safe</string>

    <string name="phone_number_prefix">+57</string>
    <string name="phone_number">Número de telefono</string>
    <string name="phone_number_intro">Entrar</string>
    <string name="text_cancel">Cancelar</string>
    <string name="code_verification">Código de verificación</string>

    <string name="my_boxes">Mis cajas</string>
    <string name="register_box">Registrar caja</string>
    <string name="note_scan_qr">Haz click en botón para escanear el código QR que se encuentra en el interior de la caja</string>
    <string name="scan_box">Escanerar caja</string>
    <string name="id_box">Id de la caja</string>
    <string name="name_box">Nombre de la caja</string>
    <string name="open_box">Abrir caja</string>
    <string name="close_box">Cerrar caja</string>
    <string name="open_state_box">La caja está abierta</string>
    <string name="closed_state_box">La caja está cerrada</string>
    <string name="near_state_box">Algo está cerca de la caja a %s cm</string>
    <string name="near_state_box_clear">No hay nada cerca de la caja</string>
    <string name="light_state_box_on">La luz de la caja está encendida</string>
    <string name="light_state_box_off">La luz de la caja está apagada</string>
    <string name="unlock_fingerprint">Activar funciones de la caja con huella</string>
    <string name="label_dont_registered_boxes">AÚN NO TIENES\nCAJAS REGISTRADAS</string>

    <string name="history">Historial</string>
    <string name="open">Abierta</string>
    <string name="close">Cerrada</string>

    <string name="biometric_title">Autenticación Biometrica</string>
    <string name="biometric_subtitle">Por favor verifica tu identidad primero</string>

    <string name="profile_name">Nombre</string>
    <string name="save">Guardar</string>
    <string name="profile_logout">Salir</string>
</resources>