<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.main.boxNew.BoxNewFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_app"
            android:minHeight="?attr/actionBarSize"
            app:navigationIcon="@mipmap/ic_back"
            app:title="@string/app_name"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/noteBarCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:paddingHorizontal="20dp"
        android:text="@string/note_scan_qr"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar" />

    <com.journeyapps.barcodescanner.DecoratedBarcodeView
        android:id="@+id/barcodeScannerView"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_margin="20dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/buttonScanner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/noteBarCode" />

    <ImageView
        android:id="@+id/imgScanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/img_scann"
        app:layout_constraintBottom_toTopOf="@id/buttonScanner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/noteBarCode" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonScanner"
        style="@style/GeneralButton"
        android:layout_margin="20dp"
        android:layout_marginTop="10dp"
        android:stateListAnimator="@null"
        android:text="@string/scan_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barcodeScannerView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/boxIdText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginBottom="60dp"
        android:background="@null"
        android:hint="@string/id_box"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/pink"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonScanner"
        app:placeholderTextColor="@color/black"
        app:shapeAppearance="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            tools:text="Id de la caja" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/boxNameText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginBottom="60dp"
        android:background="@null"
        android:hint="@string/name_box"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/pink"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/boxIdText"
        app:placeholderTextColor="@color/black"
        app:shapeAppearance="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            tools:text="Nombre de la caja" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/boxButtonSave"
        style="@style/GeneralButton"
        android:layout_margin="20dp"
        android:background="@drawable/bg_button"
        android:stateListAnimator="@null"
        android:text="@string/register_box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.smartsafe.smartsafe_app.presentation.components.loading.LoadingViewComponent
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>